--- a/pages/workflow/generate/index.wxss
+++ b/pages/workflow/generate/index.wxss
@@ -3,6 +3,7 @@
   display: block;
   /* background: #f6f6f6; */
   min-height: 100vh;
+  background: #fff;
 }
 
 .template-list-container {
@@ -58,6 +59,7 @@
 .form-item-image .t-button {
   height: 90rpx;
   border: 0;
+  /* margin: 0 auto; */
 }
 
 .button-single {
