--- a/style/global.wxss
+++ b/style/global.wxss
@@ -174,7 +174,7 @@ image,
 icon,
 scroll-view,
 text,
-button,
+/* button, */
 checkbox,
 form,
 input,
@@ -198,7 +198,7 @@ image {
 }
 button {
   padding: 0;
-  margin: 0;
+  /* margin: 0; */
   border-radius: 0;
   height: 100%;
   display: block;
